<resources>
    <string name="app_name">iAnimus</string>

    <string name="facebook_app_id">1295734030763083</string>
    <string name="fb_login_protocol_scheme">fb1295734030763083</string>

    <string name="hint_user_name">Please enter username</string>
    <string name="hint_password">Please enter password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_with_fb">Continue with Facebook</string>
    <string name="login_with_gg">Continue with Google</string>
    <string name="or">OR</string>
</resources>