<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:text="Welcome to iAnime"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_name"
                style="@style/TextInputStyle"
                android:layout_marginTop="16dp"
                app:boxStrokeColor="@drawable/edit_text_line_color"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="0.5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_user_name"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/hint_user_name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingTop="12dp"
                    android:paddingBottom="4dp"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/TextInputStyle"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@drawable/edit_text_line_color"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="0.5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingTop="12dp"
                    android:paddingBottom="4dp"
                    android:textColorHint="@android:color/darker_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_corner_button"
                android:text="@string/login"
                android:textColor="@android:color/white"
                style="@style/ButtonStyle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center" />

            <!--            <FrameLayout-->
            <!--                android:id="@+id/fl_login"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="16dp">-->

            <!--            <com.facebook.login.widget.LoginButton-->
            <!--                android:id="@+id/fb_btn"-->
            <!--                android:text="@string/login_with_fb"-->
            <!--                android:layout_marginTop="5dp"-->
            <!--                android:textColor="@android:color/white"-->
            <!--                style="@style/ButtonStyle" />-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_fb_login"
                android:drawableStart="@drawable/ic_fb"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_corner_button_facebook"
                android:text="@string/login_with_fb"
                android:textColor="@android:color/white"
                style="@style/ButtonStyle" />
            <!--            </FrameLayout>-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_gg_login"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_gg"
                android:background="@drawable/round_corner_button_google"
                android:text="@string/login_with_gg"
                android:textColor="@android:color/black"
                style="@style/ButtonStyle" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>